--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Crypto Ticker</title>
     <script src="/socket.io/socket.io.js"></script>
     <script defer src="js/app.js"></script>
@@ -13,7 +13,7 @@
   <body>
 
     <section>
-      <h2>Bitcoin Ticker</h2>
+      <h2>Crypto Ticker</h2>
       <table id="btcticker" class="table-striped">
         <thead>
           <tr>
@@ -31,7 +31,7 @@
         </tbody>
       </table>
 
-      <div id="tickertape" class="ticker-tape"></div>
+      <div id="tickertape" class="ticker-line"></div>
     </section>
 
     <section>
@@ -53,7 +53,7 @@
         </tbody>
       </table>
 
-      <div id="tickertape" class="ticker-tape"></div>
+      <div id="tickertape" class="ticker-line"></div>
     </section>
 
     <section>
@@ -75,8 +75,8 @@
         </tbody>
       </table>
 
-      <div id="tickertape" class="ticker-tape"></div>
-    </section>
+      <div id="tickertape" class="ticker-line"></div>
+    </section> 
 
 
   </body>
