implement logic for refreshing ticker table

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
     <section>
       <h2>Crypto Ticker</h2>
-      <table id="btcticker" class="table-striped">
+      <table id="btc-ticker" class="table-striped">
         <thead>
           <tr>
             <th>Currency</th>
