--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
     <script defer src="js/sparkline.js"></script>
   </head>
   <body>
-
+    <h1> Crypto Live Tracker </h1>
     <section>
-      <h2>Crypto Ticker</h2>
+      <h2>BTC Ticker</h2>
       <table id="btc-ticker" class="table-striped">
         <thead>
           <tr>
@@ -21,7 +21,6 @@
             <th>Price</th>
             <th>Volume</th>
             <th>Change</th>
-            <th>Price Trend (5 sec interval)</th>
           </tr>
         </thead>
         <tbody>
@@ -31,7 +30,6 @@
         </tbody>
       </table>
 
-      <div id="tickertape" class="ticker-line"></div>
     </section>
 
     <section>
@@ -43,7 +41,6 @@
             <th>Price</th>
             <th>Volume</th>
             <th>Change</th>
-            <th>Price Trend (5 sec interval)</th>
           </tr>
         </thead>
         <tbody>
@@ -53,7 +50,6 @@
         </tbody>
       </table>
 
-      <div id="tickertape" class="ticker-line"></div>
     </section>
 
     <section>
@@ -65,7 +61,6 @@
             <th>Price</th>
             <th>Volume</th>
             <th>Change</th>
-            <th>Price Trend (5 sec interval)</th>
           </tr>
         </thead>
         <tbody>
@@ -75,9 +70,9 @@
         </tbody>
       </table>
 
-      <div id="tickertape" class="ticker-line"></div>
     </section> 
 
+   
 
   </body>
 </html>
