add support for ETH

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
     <title>Crypto Ticker</title>
     <script src="/socket.io/socket.io.js"></script>
     <script defer src="js/app.js"></script>
-    <script defer src="js/sparkline.js"></script>
   </head>
   <body>
     <h1> Crypto Live Tracker </h1>
@@ -25,7 +24,7 @@
         </thead>
         <tbody>
           <tr>
-            <td colspan="5" data-currency="">Fetching data...Please wait...</td>
+            <td colspan="4" data-currency="">Fetching data...Please wait...</td>
           </tr>
         </tbody>
       </table>
@@ -34,7 +33,7 @@
 
     <section>
       <h2>Etherum Ticker</h2>
-      <table id="ethticker" class="table-striped">
+      <table id="eth-ticker" class="table-striped">
         <thead>
           <tr>
             <th>Currency</th>
@@ -45,7 +44,7 @@
         </thead>
         <tbody>
           <tr>
-            <td colspan="5" data-currency="">Fetching data...Please wait...</td>
+            <td colspan="4" data-currency="">Fetching data...Please wait...</td>
           </tr>
         </tbody>
       </table>
@@ -54,7 +53,7 @@
 
     <section>
       <h2>DOGE Ticker</h2>
-      <table id="dogeticker" class="table-striped">
+      <table id="doge-ticker" class="table-striped">
         <thead>
           <tr>
             <th>Currency</th>
@@ -65,7 +64,7 @@
         </thead>
         <tbody>
           <tr>
-            <td colspan="5" data-currency="">Fetching data...Please wait...</td>
+            <td colspan="4" data-currency="">Fetching data...Please wait...</td>
           </tr>
         </tbody>
       </table>
