complete + added doge support

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,12 @@
 
     </section> 
 
+    <footer>
+      Created By
+      <h3 style="margin: 5px 0;">Brenner Haverlock</h3>
+      <a href="mailto:brenner.haverlock@gmail.com">brenner.haverlock@gmail.com</a> | <a href="https://github.com/brennerhaverlock/cryptolive" _target="blank">https://github.com/brennerhaverlock/cryptolive</a>
+    </footer>
+
    
 
   </body>
